# CodeTraining

./: 404.html  index.html  mkdocs.yml  pyproject.toml
Advanced-FRC-Programming/2/: index.html
Advanced-FRC-Programming/3/: index.html
Advanced-FRC-Programming/4/: index.html
Advanced-FRC-Programming/5/: index.html
Advanced-FRC-Programming/7/: index.html
Basic-FRC-Programming/1/: index.html
Basic-FRC-Programming/2/: index.html
Basic-FRC-Programming/3/: index.html
Basic-FRC-Programming/4/: index.html
Basic-FRC-Programming/5/: index.html
Basic-FRC-Programming/6/: index.html
Basic-FRC-Programming/7/: index.html
Basic-FRC-Programming/8/: index.html
assets/: pidstyle.css
docs/: index.md  notes.md
docs/Advanced-FRC-Programming/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
docs/Basic-FRC-Programming/: 1.md  2.md  3.md  4.md  5.md  6.md  7.md
docs/assets/: pid-sim.js
notes/: index.html
search/: search_index.json
site/: index.html
site/Advanced-FRC-Programming/1/: index.html
site/Advanced-FRC-Programming/2/: index.html
site/Advanced-FRC-Programming/3/: index.html
site/Advanced-FRC-Programming/4/: index.html
site/Advanced-FRC-Programming/5/: index.html
site/Advanced-FRC-Programming/6/: index.html
site/Advanced-FRC-Programming/7/: index.html
site/Basic-FRC-Programming/1/: index.html
site/Basic-FRC-Programming/2/: index.html
site/Basic-FRC-Programming/3/: index.html
site/notes/: index.html
site/search/: search_index.json
site/troubleshooting/: index.html
troubleshooting/: index.html
(+4 files in other folders)
